fix z-index

--- a/styles/PostList.module.scss
+++ b/styles/PostList.module.scss
@@ -21,7 +21,6 @@
     height: 50px;
     gap: 20px;
     background-color: #4ade80;
-    z-index: 1;
 
     &::before {
       content: "";
@@ -35,12 +34,13 @@
       background-image: url(../public/Vectorplus.png);
     }
 
-    &__form {
+    &__from {
       display: flex;
+      position: absolute;
       flex-direction: column;
       width: 300px;
       gap: 20px;
-      top: 95vh;
+      top: 50vh;
       left: 50vw;
       transform: translate(-50% , -30%);
       justify-content: center;
@@ -49,7 +49,6 @@
       padding: 30px;
       border-radius: 25px;
       background-color: rgb(239, 241, 228);
-      position: sticky;
       z-index: 5;
 
       &__box {
@@ -247,7 +246,7 @@
 
     &__add__event {
       position: fixed;
-      z-index: 4;
+      z-index: 10;
       top:  80vh;
       width: $width-mobile;
 
